# factory-assembly-line-simulator

./: .gitignore  CMakeLists.txt  README.md
include/: Station.h  Workstation.h
src/: CustomerOrder.cpp  CustomerOrder.h  LineManager.cpp  LineManager.h  Main.cpp  Station.cpp  Utilities.cpp  Utilities.h  Workstation.cpp  Workstation.h
tests/: CMakeLists.txt  TestCustomerOrder.cpp  TestIntegration.cpp  TestLineManager.cpp  TestMain.cpp  TestStation.cpp  TestUtilities.cpp  TestWorkstation.cpp  doctest.h
